# janto.github.io

./: .gitignore  CNAME  Makefile  README.md  _config.yml  index.html  index.md  params.json  pyproject.toml
crude/: index.md
crude/data/: some_data.json
scripts/: cog_tools.py
test/: index.md
test/data/: some_data.json
