[tool.poetry]
name = "janto.github.io"
version = "0.1.0"
description = ""
authors = ["Janto Dreijer <jantod@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cogapp = "^3.0.0"
tabulate = "^0.8.7"
seaborn = "^0.11.1"
pandas = "^1.2.0"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
